# add-issue-number-to-conventional-commit

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  add_issue_number_to_conventional_commit.py  cov.xml  pyproject.toml
.github/workflows/: test.yml
tests/: test_add_issue_number.py  test_git_branch.py
